Name:           soegtk
Version:        0.11.0
License:        GPL
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Duncan Coutts, Paul Liu
Maintainer:     gtk2hs-users@sourceforge.net
Build-Type:     Custom
Cabal-Version:  >= 1.6.0
Stability:      provisional
homepage:       http://www.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       GUI functions as used in the book "The Haskell School of Expression".
Description:    An alternative implementation of the graphics library used in the book The Haskell
                School of Expression, by Paul Hudak, <http://www.haskell.org/soe/
                This library builds on top of Gtk+.
				
Category:       Graphics
Tested-With:    GHC == 6.12.1

Source-Repository head
  type:         darcs
  location:     http://code.haskell.org/gtk2hs/
  subdir:       soegtk

Library
        build-depends:  base >= 4, array, containers, haskell98, mtl,
                        glib  >= 0.11 && < 0.12, 
                        cairo >= 0.11 && < 0.12,
                        gtk   >= 0.11 && < 0.12, 
                        old-time >= 1.0.0.2
						
        exposed-modules:
          Graphics.SOE.Gtk		

        x-c2hs-Header:  gtk/gtk.h
        pkgconfig-depends: gtk+-2.0
		
