Name:   gtk2hs-buildtools
Version:        0.12.1
License:        GPL-2
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Axel Simon, Duncan Coutts, Manuel Chakravaty
Maintainer:     gtk2hs-devel@lists.sourceforge.net
Build-Type:     Simple
Cabal-Version:  >= 1.8
Stability:      stable
homepage:       http://projects.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       Tools to build the Gtk2Hs suite of User Interface libraries.
Description:    This package provides a set of helper programs necessary to
                build the Gtk2Hs suite of libraries. These tools include
                a modified c2hs binding tool that is used to generate
                FFI declarations, a tool to build a type hierarchy that
                mirrors the C type hierarchy of GObjects found in glib,
                and a generator for signal declarations that are used
                to call back from C to Haskell. These tools are not needed
                to actually run Gtk2Hs programs.
Category:       Development
Tested-With:    GHC == 6.10.4, GHC == 6.12.3, GHC == 7.0.4, GHC == 7.2.1
Data-Files:     callbackGen/Signal.chs.template
                hierarchyGen/hierarchy.list
                hierarchyGen/Hierarchy.chs.template
Extra-Source-Files:     c2hs/toplevel/c2hs_config.h

Source-Repository head
  type:         darcs
  location:     http://code.haskell.org/gtk2hs/
  subdir:       tools

Flag ClosureSignals
        Description:    Use the the GClosure-based signals implementation.
--        if ! (arch(sparc) || arch(x86_64) || impl(ghc >= 6.4.1))
--        Default:        False

Executable gtk2hsTypeGen
        main-is:        TypeGen.hs
        hs-source-dirs: hierarchyGen
        other-modules:  Paths_gtk2hs_buildtools
        build-depends:  base

Executable gtk2hsHookGenerator
        main-is:        HookGenerator.hs
        hs-source-dirs: callbackGen
        if flag(ClosureSignals)
          cpp-options:  -DUSE_GCLOSURE_SIGNALS_IMPL
        other-modules:  Paths_gtk2hs_buildtools
        build-depends:  base

Executable gtk2hsC2hs
        main-is:        Main.hs
        build-depends:  base >= 4 && < 5,
                        process, directory, array, containers, pretty,
                        filepath, random
        build-tools:    alex, happy
        other-modules:  BaseVersion
                        Config
                        Errors
                        Binary
                        DLists
                        FastMutInt
                        FileOps
                        FNameOps
                        Map
                        Position
                        Set
                        UNames
                        CIO
                        State
                        StateBase
                        StateTrans
                        Attributes
                        Idents
                        NameSpaces
                        Lexers
                        C
                        CAST
                        CAttrs
                        CBuiltin
                        CLexer
                        CNames
                        CParser
                        CParserMonad
                        CPretty
                        CTokens
                        CTrav
                        CHS
                        CHSLexer
                        CInfo
                        GBMonad
                        GenBind
                        GenHeader
                        C2HSState
                        Switches
                        C2HSConfig
                        Version
        hs-source-dirs: c2hs/toplevel
                        c2hs/state
                        c2hs/gen
                        c2hs/chs
                        c2hs/c
                        c2hs/base/admin
                        c2hs/base/general
                        c2hs/base/state
                        c2hs/base/errors
                        c2hs/base/syms
                        c2hs/base/syntax
        c-sources:      c2hs/toplevel/c2hs_config.c
        if os(darwin)
          cpp-options:  -D_C2HS_CPP_IS_GCC
        else
          cpp-options:  -D_C2HS_CPP_LANG_SINGLE
        extensions:     ForeignFunctionInterface
