Name:           webkit
Version:        0.10.5
License:        GPL
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Cjacker Huang, Andy Stewart, Axel Simon
Maintainer:     gtk2hs-users@sourceforge.net
Build-Type:     Custom
Cabal-Version:  >= 1.6.0
Stability:      provisional
homepage:       http://www.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       Binding to the Webkit library.
Description:    WebKit is a web content engine, derived from KHTML and KJS from KDE, and
                used primarily in Apple's Safari browser.  It is made to be embedded in
                other applications, such as mail readers, or web browsers.

                It is able to display content such as HTML, SVG, XML, and others. It also
                supports DOM, XMLHttpRequest, XSLT, CSS, Javascript/ECMAscript and more.

Category:       Graphics
Tested-With:    GHC == 6.12.1
x-Types-File:   Graphics/UI/Gtk/WebKit/Types.chs
x-Types-ModName: Graphics.UI.Gtk.WebKit.Types
x-Types-Forward: *Graphics.UI.GtkInternals
x-Types-Destructor: objectUnrefFromMainloop
Extra-Source-Files: hswebkit.h

Source-Repository head
  type:         darcs
  location:     http://code.haskell.org/gtk2hs/
  subdir:       webkit

Library
        build-depends:  base >= 4, array, containers, haskell98, mtl,
                        glib  >= 0.10.5 && < 0.11, 
                        pango >= 0.10.5 && < 0.11, 
                        cairo >= 0.10.5 && < 0.11,
                        gtk   >= 0.10.5 && < 0.11
						
        build-tools:    gtk2hsC2hs, gtk2hsHookGenerator, gtk2hsTypeGen
		
        exposed-modules:
          Graphics.UI.Gtk.WebKit.Download
          Graphics.UI.Gtk.WebKit.HitTestResult
          Graphics.UI.Gtk.WebKit.NetworkRequest
          Graphics.UI.Gtk.WebKit.NetworkResponse
          Graphics.UI.Gtk.WebKit.SecurityOrigin
          Graphics.UI.Gtk.WebKit.SoupAuthDialog
          Graphics.UI.Gtk.WebKit.WebBackForwardList
          Graphics.UI.Gtk.WebKit.WebDatabase
          Graphics.UI.Gtk.WebKit.WebDataSource
          Graphics.UI.Gtk.WebKit.WebFrame
          Graphics.UI.Gtk.WebKit.WebHistoryItem
          Graphics.UI.Gtk.WebKit.WebInspector
          Graphics.UI.Gtk.WebKit.WebNavigationAction
          Graphics.UI.Gtk.WebKit.WebPolicyDecision
          Graphics.UI.Gtk.WebKit.WebResource
          Graphics.UI.Gtk.WebKit.WebSettings
          Graphics.UI.Gtk.WebKit.WebView
          Graphics.UI.Gtk.WebKit.WebWindowFeatures
        other-modules:
          Graphics.UI.Gtk.WebKit.Internal
          Graphics.UI.Gtk.WebKit.Types		  

        extensions:     ForeignFunctionInterface
		
        x-c2hs-Header:  hswebkit.h
        x-Types-Tag: webkit
        pkgconfig-depends: webkit-1.0 >= 1.1.15
