Name:           webkit
Version:        0.11.0
License:        GPL
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Cjacker Huang, Andy Stewart, Axel Simon
Maintainer:     gtk2hs-users@sourceforge.net
Build-Type:     Custom
Cabal-Version:  >= 1.6.0
Stability:      provisional
homepage:       http://www.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       Binding to the Webkit library.
Description:    WebKit is a web content engine, derived from KHTML and KJS from KDE, and
                used primarily in Apple's Safari browser.  It is made to be embedded in
                other applications, such as mail readers, or web browsers.

                It is able to display content such as HTML, SVG, XML, and others. It also
                supports DOM, XMLHttpRequest, XSLT, CSS, Javascript/ECMAscript and more.

Category:       Graphics
Tested-With:    GHC == 6.12.1
Extra-Source-Files: hswebkit.h
                    Gtk2HsSetup.hs
                    marshal.list
					
x-Types-File:       Graphics/UI/Gtk/WebKit/Types.chs
x-Types-Tag:        webkit
x-Types-ModName:    Graphics.UI.Gtk.WebKit.Types
x-Types-Forward:    *Graphics.UI.GtkInternals
x-Types-Destructor: objectUnrefFromMainloop

Source-Repository head
  type:         darcs
  location:     http://code.haskell.org/gtk2hs/
  subdir:       webkit

Library
        build-depends:  base >= 4, array, containers, haskell98, mtl,
                        glib  >= 0.11 && < 0.12, 
                        pango >= 0.11 && < 0.12, 
                        cairo >= 0.11 && < 0.12,
                        gtk   >= 0.11 && < 0.12
						
        build-tools:    gtk2hsC2hs, gtk2hsHookGenerator, gtk2hsTypeGen
		
        exposed-modules:
          Graphics.UI.Gtk.WebKit.Download
          Graphics.UI.Gtk.WebKit.HitTestResult
          Graphics.UI.Gtk.WebKit.NetworkRequest
          Graphics.UI.Gtk.WebKit.NetworkResponse
          Graphics.UI.Gtk.WebKit.SecurityOrigin
          Graphics.UI.Gtk.WebKit.SoupAuthDialog
          Graphics.UI.Gtk.WebKit.WebBackForwardList
          Graphics.UI.Gtk.WebKit.WebDatabase
          Graphics.UI.Gtk.WebKit.WebDataSource
          Graphics.UI.Gtk.WebKit.WebFrame
          Graphics.UI.Gtk.WebKit.WebHistoryItem
          Graphics.UI.Gtk.WebKit.WebInspector
          Graphics.UI.Gtk.WebKit.WebNavigationAction
          Graphics.UI.Gtk.WebKit.WebPolicyDecision
          Graphics.UI.Gtk.WebKit.WebResource
          Graphics.UI.Gtk.WebKit.WebSettings
          Graphics.UI.Gtk.WebKit.WebView
          Graphics.UI.Gtk.WebKit.WebWindowFeatures
        other-modules:
          Graphics.UI.Gtk.WebKit.Internal
          Graphics.UI.Gtk.WebKit.Types		  
          Graphics.UI.Gtk.WebKit.Signals

        extensions:     ForeignFunctionInterface
		
        x-Signals-File:  Graphics/UI/Gtk/WebKit/Signals.chs
        x-Signals-Modname: Graphics.UI.Gtk.WebKit.Signals
        x-Signals-Types: marshal.list
        x-Signals-Import: Graphics.UI.GtkInternals
		
        x-c2hs-Header:  hswebkit.h
        pkgconfig-depends: webkit-1.0 >= 1.1.15
